--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -32,7 +32,7 @@
             >
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/inputEmail"
+                android:id="@+id/registerInputEmail"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textColor="#000"
@@ -57,7 +57,7 @@
                 android:hint="@string/inputUsername"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/input_username"
+                android:id="@+id/inputUsername"
                 android:textColor="#000"
                 android:inputType="text"
                 />
