setup ordering of blog post part

--- a/app/src/main/res/navigation/nav_blog.xml
+++ b/app/src/main/res/navigation/nav_blog.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/blogFragment"
-        android:name="com.example.blogapplication.ui.main.blog.BlogFragment"
+        android:name="com.example.blogapplication.ui.main.blog_fragment.BlogFragment"
         android:label="fragment_blog"
         tools:layout="@layout/fragment_blog" >
         <action
