--- a/app/src/main/res/layout/fragment_blog.xml
+++ b/app/src/main/res/layout/fragment_blog.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.main.blog.BlogFragment"
+    tools:context=".ui.main.blog_fragment.BlogFragment"
 
     >
 
@@ -23,9 +23,9 @@
 <!--        />-->
 
     <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipe_refresh"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/swipe_refresh"
         >
 
         <androidx.recyclerview.widget.RecyclerView
